--- a/puctesis_ejemplo.tex
+++ b/puctesis_ejemplo.tex
@@ -362,12 +362,17 @@ The style file, \,\verb+puctesis.sty,+\, and the document class \,\verb+puctesis
 
 \chapter{INTRODUCCIÓN}
 
-Ante la cuestión sobre qué factores influyen en el desarrollo económico de los países, la literatura económica se ha enfocado tradicionalmente en factores característicos del país y políticas económicas mantenidas en el tiempo, tales como expectativas de vida y escolaridad, menor tasa de fertilidad, baja inflación, bajo gasto de gobierno, entre otros \cite{barro1996determinants}. 	
+\section{Líderes y desarrollo}
+
+¿Qué factores influyen en el desarrollo económico de los países? Ante esta pregunta solo una pequeña fracción de  investigadores ha centrado su atención sobre el potencial rol de los líderes que gobiernan estos países. La vasta literatura en crecimiento, en cambio,  se ha enfocado en el efecto de factores característicos del país  y políticas económicas mantenidas en el tiempo. \citeA{barro1996determinants} señala que el crecimiento es favorecido por expectativas de vida y escolaridad más altas, una menor tasa de fertilidad, menor consumo de gobierno y bajas tasas de inflación. También se ha encontrado una relación con  factores geográficos (e.g. acceso al mar y condiciones climáticas) \cite{Sachs1997} y étnicos \cite{easterly1997africa}. Por último, divesas publicaciones se centran en el rol de las instituciones como motores de crecimiento económico \cite{Acemoglu2005385,Dawson1998Inst,Rodrik2000,Dollar2003133}.   
+
+como expectativas de vida, escolaridad y tasa de fertilidad y  en el efecto de políticas económicas mantenidas en el tiempo, como bajas tasas de inflación y bajo gasto de gobierno \cite{barro1996determinants}.
+ 	
 Pero se puede argumentar que la labor de los líderes al mando de un país es también un factor a considerar. El diseño institucional, incluso en las democracias más avanzadas, a menudo facilita que presidentes y primeros ministros puedan dejar una impronta personal en decisiones y políticas de estado, y así influir significativamente en el progreso económico de las naciones. En efecto, investigaciones recientes muestran que los líderes nacionales cumplen un rol importante afectando el crecimiento económico de sus países \cite{jones2004leaders,besley2011educated, besley2010political}. 
 Estos estudios indican que la alternacia de líderes en el poder induce cambios en el crecimiento del Producto Interno Bruto (PIB) de los países \cite{jones2004leaders} y que la dirección de estos cambios podría ser explicada, en parte, por características personales de los líderes tales como sus estudios \cite{besley2011educated}.
 Esta  evidencia motiva la examinación de otras variables macroeconómicas que podrían ser directamente afectadas por las políticas implementadas por los líderes. 
 
-Un candidato ideal a considerar para tal estudio es el comercio internacional de un país, que engloba un conjunto de variables macroeconómicas, entre las cuales destacan importaciones, exportaciones e inversión extranjera directa (FDI, por \textit{Foreign Direct Investment} en inglés). Históricamente se ha sostenido la idea de que economías más abiertas al intercambio comercial, es  decir que facilitan o promueven flujos de importaciones y exportaciones, tienen mejor desempeño económico \cite{Dollar2004, berg2003trade,Wacziarg2008}. Flujos de FDI también afectan positivamente el crecimiento \cite{Azman-Saini2010, Borensztein1998}. 
+Un candidato ideal a analizar es la apertura comercial de un país, variable que agrega importaciones y exportaciones  en un período determinado. Históricamente se ha sostenido la idea de que la apertura al comercio internacional acelera el desarrollo de los países \cite{Dollar2004}. Diversos estudios han concluido que , es  decir que facilitan o promueven flujos de importaciones y exportaciones, tienen mejor desempeño económico \cite{Dollar2004, berg2003trade,Wacziarg2008}. Flujos de FDI también afectan positivamente el crecimiento \cite{Azman-Saini2010, Borensztein1998}. 
 Por lo que sin duda el estudio del desarrollo o crecimiento de  importaciones, exportaciones y flujos de FDI es relevante. 
 
 Por otro lado, generalmente un mandatario tiene la capacidad de implementar políticas que tendrán efectos tangibles y pronosticables en el intercambio comercial. Por ejemplo, los gobiernos pueden aplicar barreras comerciales como aranceles, licencias de importación y exportación, cuotas o subsidios para restringir importaciones. Estas medidas buscan generalmente proteger industrias locales y empleos de la competencia extranjera. Por otra parte, la evidencia empírica sugiere que la apertura de la economía aumenta el crecimiento \cite{Wacziarg2008,Dollar2004}, por lo que existen incentivos para que los gobernantes reduzcan los aranceles y levanten otras barreras, ya sea unilateralmente, o multilateralmente a través de Tratados de Libre Comercio (TLC) con otros países.
