--- a/puctesis_refs.bib
+++ b/puctesis_refs.bib
@@ -1167,3 +1167,79 @@
 	volume = {72},
 	year = {2003}
 }
+@article{Sachs1997,
+	author = {Sachs, Jeffrey and Warner, Andrew M},
+	file = {:C$\backslash$:/Users/Roberto/Google Drive/Memoria/Documentos/Papers/Trade/slow growth.pdf:pdf},
+	journal = {Journal of African Economies},
+	mendeley-groups = {Economic growth},
+	number = {3},
+	pages = {335--376},
+	title = {{Sources of Slow Growth in African Economies 1 Jeffrey D . Sachs and Andrew M . Warner Harvard Institute for International Development}},
+	volume = {6},
+	year = {1997}
+}
+@article{easterly1997africa,
+	title={Africa's growth tragedy: policies and ethnic divisions},
+	author={Easterly, William and Levine, Ross},
+	journal={The Quarterly Journal of Economics},
+	pages={1203--1250},
+	year={1997},
+	publisher={JSTOR}
+}
+@incollection{Acemoglu2005385,
+	title = "Chapter 6 Institutions as a Fundamental Cause of Long-Run Growth ",
+	editor = "Philippe Aghion and Steven N. Durlauf",
+	booktitle = "",
+	publisher = "Elsevier",
+	year = "2005",
+	volume = "1, Part A",
+	pages = "385 - 472",
+	series = "Handbook of Economic Growth ",
+	issn = "1574-0684",
+	doi = "http://dx.doi.org/10.1016/S1574-0684(05)01006-3",
+	url = "http://www.sciencedirect.com/science/article/pii/S1574068405010063",
+	author = "Daron Acemoglu and Simon Johnson and James A. Robinson",
+}
+@article {Dawson1998Inst,
+	author = {Dawson, John W.},
+	title = {INSTITUTIONS, INVESTMENT, AND GROWTH: NEW CROSS-COUNTRY AND PANEL DATA EVIDENCE},
+	journal = {Economic Inquiry},
+	volume = {36},
+	number = {4},
+	publisher = {Blackwell Publishing Ltd},
+	issn = {1465-7295},
+	url = {http://dx.doi.org/10.1111/j.1465-7295.1998.tb01739.x},
+	doi = {10.1111/j.1465-7295.1998.tb01739.x},
+	pages = {603--619},
+	year = {1998},
+}
+@Article{Rodrik2000,
+	author="Rodrik, Dani",
+	title="Institutions for high-quality growth: What they are and how to acquire them",
+	journal="Studies in Comparative International Development",
+	volume="35",
+	number="3",
+	pages="3--31",
+	year= "2000",
+	abstract="This article opens with a discussion of the types of institutions that allow markets to perform adequately. While we can identify in broad terms what these are, there is no unique mapping between markets and the non-market institutions that underpin them. The paper emphasizes the importance of ``local knowledge'', and argues that a strategy of institution building must not over-emphasize best-practice ``blueprints'' at the expense of experimentation. Participatory political systems are the most effective ones for processing and aggregating local knowledge. Democracy is a meta-institution for building good institutions. A range of evidence indicates that participatory democracies enable higher-quality growth.",
+	issn="1936-6167",
+	doi="10.1007/BF02699764",
+	url="http://dx.doi.org/10.1007/BF02699764"
+}
+@article{Dollar2003133,
+	title = "Institutions, trade, and growth ",
+	journal = "Journal of Monetary Economics ",
+	volume = "50",
+	number = "1",
+	pages = "133 - 162",
+	year = "2003",
+	note = "",
+	issn = "0304-3932",
+	doi = "http://dx.doi.org/10.1016/S0304-3932(02)00206-4",
+	url = "http://www.sciencedirect.com/science/article/pii/S0304393202002064",
+	author = "David Dollar and Aart Kraay",
+	keywords = "Trade",
+	keywords = "Growth "
+}
+
+
